# AVL_Tree

./: CMakeLists.txt  CompareTest.cpp  CompareTest.h  gtests.cpp  main.cpp  tree.h
tests/: CMakeLists.txt  test2.txt  test3.txt  test_gen1.txt  test_gen1_ans.txt
